# SET_game_project

./: README.md
Data_evaluation/: Data.txt  Data_brute_force.txt  Evaluation.py  set_results.json
Dataset_generation/: Brute_Force_Data.txt  CMakeLists.txt  Data.txt  Data_brute_force.txt  Evaluation.py  FInd_SETs.h  Find_SETs.h  Find_SETs_brute.h  Main  Main.cpp  Results.txt  Table.h  Winning_hands.h  Write_txt.h  info.txt  my_program  set_results.json
Dataset_generation/include/: Find_SETs.h  Find_SETs_brute.h  Table.h  Write_txt.h
Dataset_generation/info/: Table_info.txt  Write_txt_info.txt  find_SETs_brute_info.txt  find_SETs_info.txt
Dataset_generation/src/: Find_SETs.cpp  Find_SETs_brute.cpp  Table.cpp  Write_txt.cpp
Dataset_generation/tests/: Table_test.cpp  test.cpp
Neural Network/: NN.py  cnn.py
Neural_Network/: CNN.py  DNN.py  Incorrect_NN.py  NN.py
